style.css
body {
    font-family: Arial, sans-serif;
    font-size: 11pt;
    margin: 20px;
    background-color: #f0f0f0;
}

h2 {
    margin-bottom: 30px;
}

label {
    font-weight: thin;
    margin-right: 10px;
}

.container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    max-width: 80%;
}

.select-group {
    display: flex;
    align-items: center;
    width: 30%;

}

.select-group select {
    margin-left: auto;
}

.settings {
    height: 100px; 
    overflow: hidden;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

#pointA {
    gap: 10px;
    padding: 10px;
}

#maxCoord {
    padding-block: 20px;
    color: #636363;
}

#coordinateInputs {
    display: flex;
    gap: 10px;
}

input[type="number"], select {
    padding: 5px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.result1 {
    margin-top: 20px;
    padding: 10px;
}

.result2 {
    margin-top: 20px;
    padding: 10px;
}

.hidden {
    display: none;
}

.steps-container {
    display: flex;
    flex-direction: row-reverse; /* Zeigt den Inhalt von rechts nach links an */
    justify-content: flex-start;
    margin-top: 20px;
    padding: 10px;
    border: 1px solid #ddd;
    background-color: #f9f9f9;
    font-family: monospace;
    white-space: pre;
    overflow-x: auto;
}

.step-bit {
    padding: 0 5px;
    transition: background-color 0.3s;
}

.color-x { color: red; }
.color-y { color: blue; }
.color-z { color: green; }

.binary-coordinates {
    font-family: monospace;
    margin-bottom: 10px;
}

